# fluids2

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  main.js  package-lock.json  package.json  webpack.config.js
.github/workflows/: build-www.yml
src/: barnes_hut.rs  fluid_simulation.rs  index.ts  lib.rs  main.rs  particle_buffer.rs  quad_tree.rs
www/: index.html  index.ts  package-lock.json  package.json  webpack.config.js
www/src/: barnesHut.ts  fluidCradle.ts  fluidSimulation.ts  index.ts  index2.ts  particleVisualization.ts
